<resources>
    <string name="app_name">BookKeeping</string>
    <string name="date">Дата</string>
    <string name="income_sum">Сумма дохода</string>
    <string name="income_sum_hint">Введите сумму дохода</string>
    <string name="income_type">Тип дохода</string>
    <string name="income_type_hint">Введите тип дохода</string>
    <string name="expense_sum">Сумма расхода</string>
    <string name="expense_sum_hint">Введите сумму расхода</string>
    <string name="expense_type">Тип расхода</string>
    <string name="expense_type_hint">Введите тип расхода</string>
    <string name="expense_shop">Наименование организации</string>
    <string name="expense_shop_hint">Введите наименование организации</string>
    <string name="save">Сохранить</string>
    <string name="required_field">Поле обязательно для заполнения</string>
    <string name="error_sum_less_zero">Сумма не может быть меньше или равна нулю</string>
    <string name="date_picker_title">Дата: </string>
    <string name="new_income">Добавить доход</string>
    <string name="new_expense">Добавить расход</string>
    <string name="del_item">Удалить</string>
    <string name="new_expense_by_qr">Добавить расход по QR коду</string>
    <string name="current_balance">Текущий баланс:</string>
    <string name="zero_balance">0.00</string>
    <string name="sum_name">Сумма: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
